index: Fix vertical alignment of text and favicons

--- a/assets/common.css
+++ b/assets/common.css
@@ -77,6 +77,7 @@ table td {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
     gap: 8px;
 }
 
